# minisip

./: .gitignore  README.4.developers  README.build  README.deps  build.conf  build.local.example  build.pl  buildall.sh  builddocumentation.sh  buildenv.sh  buildonly.sh  run.minisip.sh
libmcrypto/: Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  libmcrypto.cpp  libmcrypto.pc.in  libmcrypto.spec
libmcrypto/debian/: Makefile.am  changelog  control  control.maemo  libmcrypto-dev.install  rules
libmcrypto/include/: Makefile.am  compilation_config_win32.h  config.h  oakley_groups.h
libmcrypto/m4/: libmcrypto.m4
libmcrypto/source/: CacheManager.cxx  CertificateFinder.cxx  CertificatePathFinderUcd.cxx  GDEnum.cxx  Makefile.am  SipSim.cxx  SipSimDh.cxx  SipSimPk.cxx  SipSimSmartCardGD.cxx  SipSimSoft.cxx  SmartCard.cxx  SmartCardException.cxx  TLSException.cxx  TlsException.cxx  TlsSrpSocket.cxx  aes.cxx  base64.cxx  cert.cxx  certificate.cxx  init.cxx  rijndael-alg-fst.cxx  uuid.cxx
libmcrypto/tests/: 000_compile.cxx  Makefile.am
libmcrypto/vs8_proj/: libmcrypto.vcproj
libmcrypto/win32/: libmcrypto-res.rc.in
libmikey/: Makefile.W32  Makefile.am  TODO  bootstrap  configure.ac  libmikey.pc.in  libmikey.spec
libmikey/debian/: Makefile.am  changelog  control  control.maemo  libmikey-dev.install  libmikey0.install  rules
libmikey/include/: Makefile.am  String.h  compilation_config_w32_wce.h  config.h
libmikey/keyagreement/: KeyAgreement.cxx  KeyAgreementDH.cxx  KeyAgreementDHHMAC.cxx  KeyAgreementPKE.cxx  KeyAgreementPSK.cxx  KeyAgreementRSAR.cxx  KeyValidity.cxx  keyagreement.cxx  keyagreement_dh.cxx  keyagreement_psk.cxx  keyvalidity.cxx
libmikey/m4/: libmikey.m4
libmikey/mikey/: Mikey.cxx  MikeyCsIdMap.cxx  MikeyException.cxx  MikeyMessage.cxx  MikeyMessageDH.cxx  MikeyMessageDH.h  MikeyMessageDHHMAC.cxx  MikeyMessageDHHMAC.h  MikeyMessagePKE.cxx  MikeyMessagePKE.h  MikeyMessagePSK.cxx  MikeyMessagePSK.h  MikeyMessageRSAR.cxx  MikeyMessageRSAR.h  MikeyPayload.cxx  MikeyPayloadCERT.cxx  MikeyPayloadCHASH.cxx  MikeyPayloadDH.cxx  MikeyPayloadERR.cxx  MikeyPayloadGeneralExtension.cxx  MikeyPayloadHDR.cxx  MikeyPayloadID.cxx  MikeyPayloadKEMAC.cxx  MikeyPayloadKeyData.cxx  MikeyPayloadPKE.cxx  MikeyPayloadRAND.cxx  MikeyPayloadSIGN.cxx  MikeyPayloadSP.cxx  MikeyPayloadT.cxx  MikeyPayloadV.cxx
libmikey/tests/: 000_compile.cxx  Makefile.am
libmikey/vs8_proj/: libmikey.vcproj
libmikey/win32/: Makefile.am  libmikey-res.rc.in
libminisip/: AUTHORS  Makefile.am  bootstrap  configure.ac  doxygen.conf  libminisip.pc.in  libminisip.spec
libminisip-swig/: Makefile.am  aclocal.m4  bootstrap  configure.ac  mtypes.i  setup.in  setup.py
libminisip-swig/csharp/: std_list.i
libminisip-swig/patches/: swig_csharp_override2.patch  swig_cvs.patch
libminisip-swig/source/: AssemblyInfo.in  Makefile.am  minisip.i
libminisip-swig/tests/: Makefile.am  pygui.py  test_csharp.cs
libminisip/debian/: Makefile.am  changelog  control  control.maemo  copyright  rules
libminisip/include/: Makefile.am  compilation_config_w32_wce.h  config.h  minisip_wce_extra_includes.h
libminisip/m4/: Makefile.am  libminisip.m4  libzrtpcpp.m4
libminisip/source/: Bell.cxx  ConsoleDebugger.cxx  Gui.cxx  GuiCallback.cxx  LogEntry.cxx  Makefile.am  MessageRouter.cxx  Minisip.cxx  MinisipExceptions.cxx
libminisip/tests/: 000_compile.cxx  Makefile.am
libminisip/vs8_proj/: libminisip.vcproj
libmnetutil/: Makefile.W32  Makefile.am  README  bootstrap  configure.ac  inet_aton.c  inet_ntop.c  inet_pton.c  libmnetutil.cpp  libmnetutil.h  libmnetutil.pc.in  libmnetutil.sln  libmnetutil.spec  libmnetutil.vcproj  stdafx.cpp
libmnetutil/debian/: Makefile.am  changelog  control  control.maemo  rules
libmnetutil/examples/: Makefile.am  build-examples.sh.in  run-example.sh.in  tcpclient.cxx  tcpserver.cxx
libmnetutil/include/: Makefile.am  compilation_config_w32_wce.h  config.h  inet_aton.h  inet_ntop.h
libmnetutil/m4/: ag_check_posix_regcomp.m4  libmnetutil.m4
libmnetutil/source/: DatagramSocket.cxx  DirectorySet.cxx  DirectorySetItem.cxx  DnsNaptr.cxx  Downloader.cxx  FileDownloader.cxx  FileDownloaderException.cxx  FileUrl.cxx  HttpDownloader.cxx  HttpFileSystem.cxx  IP4Address.cxx  IP4ServerSocket.cxx  IP6Address.cxx  IP6ServerSocket.cxx  IPAddress.cxx  LdapConnection.cxx  LdapDownloader.cxx  LdapEntry.cxx  LdapException.cxx  LdapUrl.cxx  NetUtil.cxx  NetworkException.cxx  NetworkFunctions.cxx  NetworkFunctionsWin32.cxx  NetworkFunctionsWin32.h  NsLookup.cxx  SctpServerSocket.cxx  SctpSocket.cxx  ServerSocket.cxx  Socket.cxx  SocketServer.cxx  StreamSocket.cxx  TCPSocket.cxx  TLSServerSocket.cxx  TLSSocket.cxx  TcpServerSocket.cxx  TlsSrpSocket.cxx  UDPSocket.cxx  init.cxx
libmnetutil/tests/: 000_compile.cxx  001_ldap.cxx  002_naptr.cxx  Makefile.am
libmnetutil/udns/: Makefile.am
libmnetutil/vs8_proj/: libmnetutil.vcproj
libmnetutil/win32/: Makefile.am  libmnetutil-res.rc.in
libmsip/: AUTHORS  Makefile.W32  Makefile.am  bootstrap  configure.ac  doxygen.conf  libmsip.pc.in  libmsip.spec
libmsip/debian/: Makefile.am  changelog  control  control.maemo  rules
libmsip/include/: Makefile.am  compilation_config_w32_wce.h  config.h
libmsip/m4/: libmsip.m4
libmsip/source/: SipAuthenticationDigest.cxx  SipCommandDispatcher.cxx  SipSim.cxx  (+30 more)
libmstun/: AUTHORS  Makefile.am  README  bootstrap  configure.ac  libmstun.pc.in  libmstun.spec
libmutil/: AUTHORS  Makefile.W32  Makefile.am  bootstrap  configure.ac  libmutil.cpp  libmutil.h  libmutil.pc.in  libmutil.sln  libmutil.spec  libmutil.vcproj  stdafx.cpp
libzrtpcpp/: AUTHORS  ChangeLog  INSTALL  Makefile.am  TODO  bootstrap  configure.ac  libzrtpcpp.pc.in
milbc/: Makefile.am  bootstrap  configure.ac
minisip/: AUTHORS  Makefile.W32  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  icon.xpm  loc  minisip-libavcodec.patch  minisip.spec
ministun/: Makefile.am  README  bootstrap  configure.ac  ministun.pc.in
mloggingutil/: CrashSender.cxx  CrashSender.h  Makefile.am  bootstrap  configure.ac  minisipcrashsender.cxx
(+2395 files in other folders)
